# mysip

./: .clang-tidy  .gitignore  CMakeLists.txt
docs/: 0.INTRO.md  1.PARSING.md
scripts/: bye.lua  invite.lua
src/: main-gui.cpp  main.cpp
src/include/codecs/: codec.h  g711u.h
src/include/rtp/: rtp-socket.h
src/include/sdp/: sdp.h
src/include/sip/: message-header.h  request-line.h  request-uri.h  request.h  response.h  sip-agent.h  sip-dialog.h  sip-message.h  sip-parser.h  status-line.h
src/include/socket/: raw-socket.h
src/include/utils/: command.h  mylua.h
src/rtp/: rtp-socket.cpp
src/sdp/: sdp.cpp
src/sip/: CMakeLists.txt  message-header.cpp  request-line.cpp  request-uri.cpp  request.cpp  response.cpp  sip-agent.cpp  sip-message.cpp  sip-parser.cpp  status-line.cpp
src/socket/: raw-socket.cpp
src/utils/: command.cpp
tests/: parser-benchmark.cpp
tests/sip-parser/: test-basic.cpp
